# C-AI-AIMBOT

./: CMakeLists.txt  IMPLEMENTATION_NOTES.md  OPTIMIZATION_IMPLEMENTATION.md  PERFORMANCE_ANALYSIS.md  README.md
ghub/: ghub.cpp  ghub.h
include/: Aimbot.h  Aiming.h  AimingSettings.h  ConfigManager.h  CudaKernels.h  GPUBufferPool.h  InferenceEngine.h  Path.h  PerformanceMonitor.h  PersonalizationSettings.h  RecoilSettings.h  ScreenCapture.h  UI.h  minimal_font_awesome.h  types.h
src/: Aimbot.cpp  Aiming.cpp  ConfigManager.cpp  CudaKernels.cu  GPUBufferPool.cpp  InferenceEngine.cpp  Logger.cpp  Logger.h  OptimizedCudaKernels.cu  Path.cpp  PerformanceMonitor.cpp  ScreenCapture.cpp  Threading.h  UI.cpp  main.cpp
